--- a/web/themes/digitac/scss/03_component/_node-reto-frontal-form.scss
+++ b/web/themes/digitac/scss/03_component/_node-reto-frontal-form.scss
@@ -317,6 +317,17 @@
     // related ideas
     .fieldgroup.form-composite {
         margin-bottom: rem(80px);
+
+        .empty_fieldset {
+            margin: 0;
+            font-family: $font-family-base;
+            font-style: normal;
+            font-weight: 600;
+            font-size: rem(18px);
+            line-height: rem(26px);
+            text-align: left;
+            color: $primary;
+        }
     }
 
 
