--- a/web/themes/digitac/scss/05_theme/page/_node--type-reto.scss
+++ b/web/themes/digitac/scss/05_theme/page/_node--type-reto.scss
@@ -211,7 +211,8 @@
     .paragraph-pg-header {
         padding: 0;
 
-        &.paragraph--title--Nueva_idea {
+        &.paragraph--title--Nueva_idea,
+        &.paragraph--title--Nueva_experiencia {
             margin-bottom: rem(32px);
         }
     }
