--- a/web/themes/digitac/scss/digitac-hub.scss
+++ b/web/themes/digitac/scss/digitac-hub.scss
@@ -62,6 +62,7 @@
 @import '03_component/tooltip';
 @import '03_component/block-formblock-user-edit';
 @import '03_component/alert';
+@import '03_component/approve-comments';
 
 
 // THEME
