--- a/web/themes/digitac/templates/views/views-view-unformatted--cursos--block_1.html.twig
+++ b/web/themes/digitac/templates/views/views-view-unformatted--cursos--block_1.html.twig
@@ -16,13 +16,14 @@
  */
 #}
 <div class="training__image">
+<a href="/capacitacion#{{cat_id}}">
         <svg width="278" height="279" viewBox="0 0 278 279" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <clipPath id="clip-path">
                 <rect y="88.4844" width="125.31" height="267.991" rx="62.655" transform="rotate(-44.9202 0 88.4844)" fill="#D9D9D9"/>
                 </clipPath>
                 <image clip-path="url(#clip-path)" xlink:href="{{ file_url(viewimg) }}" alt="Image" class="svg__image">
         </svg>
+</a>
 </div>
-
-<span class="training__item-title">{{ viewcat }}</span>
+<span class="training__item-title"><a href="/capacitacion#{{cat_id}}">{{ viewcat }}</a></span>
 <span class="training__item-number">{{ rows|length }} {{'cursos'|t}}</span>
