--- a/web/themes/digitac/scss/03_component/_alert.scss
+++ b/web/themes/digitac/scss/03_component/_alert.scss
@@ -1,12 +1,15 @@
-.alert:not(.alert-info) {
+.alert:not(.alert-info),
+.messages--error {
     max-width: rem(400px);
+    width: 100%;
     padding-left: rem(52px);
+    padding-right: rem(45px);
     border: 1px solid $grey-300;
     background: $white;
     border-radius: rem(12px);
     box-shadow: 0px 12px 16px -4px rgba(16, 24, 40, 0.08), 0px 4px 6px -2px rgba(16, 24, 40, 0.03);
     position: fixed;
-    top: rem(128px);
+    top: rem(24px);
     right: rem(24px);
     z-index: 4;
     transition: all 0.3s ease;
@@ -28,7 +31,7 @@
 
 
     @include media(lg) {
-        top: rem(200px);
+        top: rem(24px);
         right: calc(50vw - 700px);
     }
 
@@ -46,6 +49,18 @@
     }
 
     .btn-close {
-        display: none;
+        //display: none;
+    }
+}
+
+.messages--error {
+    &::before {
+        background-image: url('../images/icons/icon-error.svg');
+    }
+}
+
+.user-logged-in {
+    .alert:not(.alert-info) {
+        top: rem(64px);
     }
 }
