--- a/web/themes/digitac/scss/05_theme/page/_register.scss
+++ b/web/themes/digitac/scss/05_theme/page/_register.scss
@@ -203,18 +203,52 @@
             }
         }
 
+        &-message {
+            h2 {
+                margin-bottom: rem(12px);
+            }
+
+            p {
+                margin-bottom: rem(12px);
+
+                &:last-of-type {
+                    margin-bottom: rem(32px);
+                }
+            }
+
+            .btn {
+                width: 100%;
+                margin-top: 0 !important;
+            }
+        }
+
         .user-register-form {
             width: 100%;
 
             .name_wrapper {
                 @include media(md) {
-                    display: flex;
-                    justify-content: space-between;
+                    /* display: flex;
+                    justify-content: space-between; */
+                    display: grid;
+                    grid-template-columns: repeat(2, 1fr);
+                    gap: rem(16px);
                 }
 
-                .form-item {
+                .nombre_req {
+                    margin: rem(-16px) 0 rem(20px);
+                    grid-area: 2 / 1 / 3 / 2;
+
                     @include media(md) {
-                        width: calc(50% - 6px);
+                        margin: rem(-38px) 0 rem(20px);
+                    }
+                }
+
+                .apellido_req {
+                    margin: rem(-16px) 0 rem(20px);
+                    grid-area: 2 / 2 / 3 / 3;
+
+                    @include media(md) {
+                        margin: rem(-38px) 0 rem(20px);
                     }
                 }
             }
@@ -369,6 +403,22 @@
                             border-radius: rem(10px) rem(10px) 0 0;
                         }
                     }
+                }
+            }
+
+
+            .req {
+                margin: rem(-16px) 0 rem(20px);
+                font-family: $font-family-base;
+                font-style: normal;
+                font-weight: 400;
+                font-size: rem(14px);
+                line-height: rem(20px);
+                color: $red-600;
+                display: none;
+
+                &.error-form-item {
+                    display: block;
                 }
             }
         }
