--- a/web/themes/digitac/templates/nodes/node--curso.html.twig
+++ b/web/themes/digitac/templates/nodes/node--curso.html.twig
@@ -129,7 +129,7 @@
                   <div class="col col--price">
                         <span class="price">
                               {{content.field_curso_gratuidad.0}}
-                              {{content.field_curso_precio.0}}
+                              {{content.field_curso_precios.0}}
                         </span>
                         <span class="date">
                               {{content.field_curso_fecha_inicio.0}}
